Fix minutes not showing while equals to 0

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -632,7 +632,7 @@ h3 {
   z-index: 30;
   padding: 16px;
   border-radius: 8px;
-  max-height: 80dvh;
+  max-height: 70dvh;
   overflow-y: auto;
 }
 .opt__close {
