--- a/src/sass/components/_options.scss
+++ b/src/sass/components/_options.scss
@@ -7,7 +7,7 @@
 	z-index: 30;
 	padding: 16px;
 	border-radius: 8px;
-	max-height: 80dvh;
+	max-height: 70dvh;
 	overflow-y: auto;
 
 	&__close {
